--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ script:
 after_success:
   - export PRETTYNAME=jan
   - source <(curl -SLs  https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/doxy_gen_and_deploy.sh)
+  - echo "DONE"
