--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ script:
 after_success:
   - export PRETTYNAME=jan
   - source <(curl -SLs  https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/doxy_gen_and_deploy.sh)
+  - echo "DONE"
   - curl -s https://www.adafruit.com/api/quotes.php?random=1 | jq -r '.[0] | .text, .author'
