--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,10 @@ script:
 after_success:
   - export PRETTYNAME=jan
   - source <(curl -SLs  https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/doxy_gen_and_deploy.sh)
-  - echo "DONE"
+  - echo "DONE."
+
+after_failure:
+  - echo "BETTER LUCK NEXT TIME."
+
+after_script:
   - curl -s https://www.adafruit.com/api/quotes.php?random=1 | jq -r '.[0] | .text, .author'
