remove doxy from install

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: bionic
 language: c
 
 install:
-  - sudo apt-get install gcc-avr binutils-avr avr-libc doxygen
+  - sudo apt-get install gcc-avr binutils-avr avr-libc
 
 before_script:
   - avr-gcc --version
